GitHub/src/objects/Module__c.object
<CustomObject>
    <description>Created to link properties and assigned CARs to modules so that XC manager can see what properties are assigned to which modules, look at the module as a whole and eventually feed data from the modules to NDW.</description>
    <fields>
        <fullName>Assigned_CAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to assign a module to CAR.</description>
        <label>Assigned CAR</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Xfinity CAR</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, XC Integration Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Custom division field driven by region.</description>
        <formula>CASE(Region__c, 
&quot;Beltway Market&quot;, &quot;Northeast&quot;, 
&quot;Freedom Market&quot;, &quot;Northeast&quot;, 
&quot;Keystone Market&quot;, &quot;Northeast&quot;, 
&quot;Houston Market&quot;, &quot;West&quot;, 
&quot;Big South Region&quot;, &quot;Central&quot;, 
&quot;Greater Chicago Market&quot;, &quot;Central&quot;, 
&quot;Greater Boston Market&quot;, &quot;Northeast&quot;, 
&quot;Heartland Region&quot;, &quot;Central&quot;, 
&quot;Florida Region&quot;, &quot;Central&quot;, 
&quot;Western New England Market&quot;, &quot;Northeast&quot;,
&quot;Twin Cities Market&quot;, &quot;West&quot;, 
&quot;California Market&quot;, &quot;West&quot;, 
&quot;Portland/Salem Market&quot;, &quot;West&quot;, 
&quot;Global&quot;, &quot;Global&quot;, 
&quot;Seattle Market&quot;, &quot;West&quot;, 
&quot;Central&quot;, &quot;Central&quot;, 
&quot;Northeast&quot;, &quot;Northeast&quot;, 
&quot;West&quot;, &quot;West&quot;,
&quot;Multiple&quot;, &quot;Multiple&quot;,
&quot;Mountain West Region&quot;, &quot;West&quot;,
 &quot;None&quot;)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Description__c</fullName>
        <description>For Module Description.</description>
        <label>Module Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region field with 15 regions.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beltway Market</fullName>
                </value>
                <value>
                    <fullName>Big South Region</fullName>
                </value>
                <value>
                    <fullName>California Market</fullName>
                </value>
                <value>
                    <fullName>Florida Region</fullName>
                </value>
                <value>
                    <fullName>Freedom Market</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Greater Boston Market</fullName>
                </value>
                <value>
                    <fullName>Greater Chicago Market</fullName>
                </value>
                <value>
                    <fullName>Heartland Region</fullName>
                </value>
                <value>
                    <fullName>Houston Market</fullName>
                </value>
                <value>
                    <fullName>Keystone Market</fullName>
                </value>
                <value>
                    <fullName>Mountain West Region</fullName>
                </value>
                <value>
                    <fullName>Portland/Salem Market</fullName>
                </value>
                <value>
                    <fullName>Seattle Market</fullName>
                </value>
                <value>
                    <fullName>Twin Cities Market</fullName>
                </value>
                <value>
                    <fullName>Western New England Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>